--- a/House Analysis.ipynb
+++ b/House Analysis.ipynb
@@ -34,6 +34,7 @@
     "from sklearn.linear_model import Perceptron\n",
     "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
     "\n",
     "#sklearn accuracy libs\n",
@@ -1217,31 +1218,31 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0518C18>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A05320B8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0548748>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0568DD8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A058F4A8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A058F4E0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A05E6208>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A060C898>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0638F28>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A06695F8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0690C88>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A06C2320>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A06EB9B0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A071C080>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0743710>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A076DDA0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A079E470>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A07C6B00>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A07F81D0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E59FC68F28>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E59FC75EB8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0462588>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A04A3080>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A03DFD68>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0422400>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C9F9D68>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA11128>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA277B8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA49E48>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA6E518>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA6E550>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CAC5278>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CAEC908>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CB15F98>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CB48668>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CB6FCF8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CBA13C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CBC9A58>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CBFC128>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CC237B8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CC4BE48>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CC7E4E0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CCA5B70>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CCD7240>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C1497B8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C1562E8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C966B00>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D1340F0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C8F2048>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C927BA8>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1324,31 +1325,31 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0BAC7F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A01D8BE0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A020C908>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E59FF68048>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0160DA0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0160D68>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A04E0860>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0B271D0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A00BE518>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A00F51D0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0122048>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0B7F0F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0CB5780>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0B33E10>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A082A4E0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0B09B70>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0BE3240>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E59FF618D0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A008CF60>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A0074630>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A006FCC0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E5A002F390>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E59FFF3A20>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E59FFC10F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E59FF8CB38>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C69A438>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C6D0F28>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C6F0CF8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D007240>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C6360F0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C6360B8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D0B9828>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D0CEC18>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5A02E8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5AD588>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C611278>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C165198>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CFFFA20>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D04C0F0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D11D780>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CD16E10>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D0A94E0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C23FB70>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C578240>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5528D0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5225C0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C48A630>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C4D9C88>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C4AB358>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5029E8>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1521,7 +1522,6 @@
     "\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
-    "\n",
     "split = StratifiedShuffleSplit(n_splits=1, test_size=0.2, random_state=42)\n",
     "for train_index, test_index in split.split(df, df[\"Cost_cat\"]):\n",
     "    X_train, X_test = X_prepared[train_index], X_prepared[test_index]\n",
@@ -1555,7 +1555,11 @@
     {
      "data": {
       "text/plain": [
-       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
+       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
+       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "           min_impurity_split=None, min_samples_leaf=1,\n",
+       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "           presort=False, random_state=None, splitter='best')"
       ]
      },
      "execution_count": 32,
@@ -1565,7 +1569,9 @@
    ],
    "source": [
     "lin_reg = linear_model.LinearRegression()\n",
-    "lin_reg.fit(X_train, y_train)"
+    "lin_reg.fit(X_train, y_train)\n",
+    "tree_reg = DecisionTreeRegressor()\n",
+    "tree_reg.fit(X_train, y_train)"
    ]
   },
   {
@@ -1577,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1592,7 @@
        "3.891665607264243e+16"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,6 +1602,90 @@
     "lin_mse = mean_squared_error(y_test, housing_predictions)\n",
     "lin_rmse = np.sqrt(lin_mse)\n",
     "lin_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The lin regressions seems way too off...there might be some features in here making it go off the charts. Let's look at some examples predicted vs the test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The zipped result is : {(587408.0, 589800.0), (420816.0, 425000.0), (-1.2033697579866758e+17, 549900.0), (371376.0, 379900.0), (501552.0, 475000.0), (450144.0, 449000.0), (-1.167824084143542e+17, 524900.0), (416480.0, 419900.0), (444912.0, 449990.0), (542400.0, 556000.0), (469184.0, 471000.0), (427872.0, 435000.0), (378320.0, 379990.0), (377696.0, 370000.0), (571760.0, 576000.0), (448576.0, 449000.0), (404000.0, 399900.0), (480928.0, 479900.0), (-1.0566737375674509e+17, 459900.0), (568736.0, 572000.0), (409024.0, 408000.0), (424528.0, 424900.0), (347136.0, 347000.0), (538368.0, 549900.0), (449952.0, 449900.0), (502576.0, 499900.0), (364864.0, 374800.0), (505968.0, 500000.0), (401408.0, 405000.0), (-4.721891267058172e+16, 472900.0), (438400.0, 439900.0), (410944.0, 409900.0), (440496.0, 439900.0), (-9.118381271328755e+16, 465900.0), (401584.0, 400000.0), (-6.850835251409889e+16, 529900.0)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapped = zip (housing_predictions, y_test)\n",
+    "mapped = set(mapped)\n",
+    "print (\"The zipped result is : \",end=\"\")\n",
+    "print (mapped)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### As you can see above some of the predictions are way off, while some being very close, let's try using a different regressor with decision trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26342.828986272525"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_predictions_tree = tree_reg.predict(X_test)\n",
+    "tree_mse = mean_squared_error(y_test, housing_predictions_tree)\n",
+    "tree_rmse = np.sqrt(tree_mse)\n",
+    "tree_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### seems much better, maybe we can use a hybrid of the above and below to predict the house prices, let's see how the predictions stack against the real data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The zipped result is : {(374800.0, 374800.0), (500000.0, 500000.0), (409900.0, 409900.0), (435000.0, 435000.0), (498800.0, 465900.0), (424202.0, 405000.0), (424900.0, 425000.0), (424900.0, 424900.0), (412500.0, 408000.0), (448000.0, 449990.0), (370000.0, 379990.0), (539900.0, 572000.0), (389900.0, 399900.0), (429000.0, 370000.0), (489900.0, 499900.0), (435000.0, 400000.0), (566000.0, 549900.0), (548000.0, 556000.0), (576000.0, 576000.0), (529000.0, 549900.0), (510000.0, 524900.0), (539900.0, 589800.0), (534900.0, 479900.0), (489900.0, 472900.0), (410000.0, 471000.0), (510000.0, 529900.0), (418500.0, 419900.0), (399000.0, 379900.0), (449000.0, 449900.0), (399000.0, 459900.0), (439900.0, 439900.0), (348000.0, 347000.0), (449000.0, 449000.0), (524900.0, 475000.0)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapped_tree = zip (housing_predictions_tree, y_test)\n",
+    "mapped_tree = set(mapped_tree)\n",
+    "print (\"The zipped result is : \",end=\"\")\n",
+    "print (mapped_tree)"
    ]
   },
   {
