6: added a readme to the project

--- a/House Analysis.ipynb
+++ b/House Analysis.ipynb
@@ -24,17 +24,12 @@
     "%matplotlib inline\n",
     "\n",
     "\n",
-    "#machine learning\n",
+    "#machine learning regression algorithms\n",
     "from sklearn import linear_model\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import SVC, LinearSVC\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.linear_model import Perceptron\n",
-    "from sklearn.linear_model import SGDClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
     "\n",
     "#sklearn accuracy libs\n",
@@ -1218,31 +1213,31 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C9F9D68>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA11128>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA277B8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA49E48>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA6E518>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CA6E550>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CAC5278>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CAEC908>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CB15F98>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CB48668>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CB6FCF8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CBA13C8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CBC9A58>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CBFC128>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CC237B8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CC4BE48>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CC7E4E0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CCA5B70>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CCD7240>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C1497B8>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C1562E8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C966B00>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D1340F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C8F2048>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C927BA8>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FADB7630>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FADC3A90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FADDC160>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FADFF7F0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAE1FE80>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAE1FEB8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAE74BE0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAEA52B0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAECC940>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAEF6FD0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAF28668>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAF50CF8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAF813C8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAFAAA58>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAFDC128>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB0027B8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB02CE48>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB060518>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB085BA8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA548908>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB5606D8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAD5BDD8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FACB8E10>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FACC3BE0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA91A518>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1325,31 +1320,31 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C69A438>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C6D0F28>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C6F0CF8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D007240>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C6360F0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C6360B8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D0B9828>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D0CEC18>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5A02E8>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5AD588>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C611278>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C165198>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CFFFA20>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D04C0F0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D11D780>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50CD16E10>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50D0A94E0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C23FB70>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C578240>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5528D0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5225C0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C48A630>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C4D9C88>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C4AB358>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001A50C5029E8>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB542860>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAADD898>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB9C4630>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB478860>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAA2FDD8>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FAA2FD68>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB460588>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB52DAC8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB56C908>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA9C3630>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB5796D8>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB5D8F28>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB544320>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB4ED9B0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB4C7080>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB42A710>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA974DA0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FB0CB470>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA936B00>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA9251D0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA8FF860>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA679EF0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA6585C0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA8BFC50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x000001E1FA62AD68>]],\n",
        "      dtype=object)"
       ]
      },
@@ -1544,25 +1539,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Train a linear regression model"
+    "#### LEARN FROM DATA USING VARIOUS ALGORITHMS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
-       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
-       "           min_impurity_split=None, min_samples_leaf=1,\n",
-       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "           presort=False, random_state=None, splitter='best')"
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1567,9 @@
     "lin_reg = linear_model.LinearRegression()\n",
     "lin_reg.fit(X_train, y_train)\n",
     "tree_reg = DecisionTreeRegressor()\n",
-    "tree_reg.fit(X_train, y_train)"
+    "tree_reg.fit(X_train, y_train)\n",
+    "randtree_reg = RandomForestRegressor()\n",
+    "randtree_reg.fit(X_train, y_train)"
    ]
   },
   {
@@ -1583,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1590,7 @@
        "3.891665607264243e+16"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,48 +1606,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The lin regressions seems way too off...there might be some features in here making it go off the charts. Let's look at some examples predicted vs the test set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The zipped result is : {(587408.0, 589800.0), (420816.0, 425000.0), (-1.2033697579866758e+17, 549900.0), (371376.0, 379900.0), (501552.0, 475000.0), (450144.0, 449000.0), (-1.167824084143542e+17, 524900.0), (416480.0, 419900.0), (444912.0, 449990.0), (542400.0, 556000.0), (469184.0, 471000.0), (427872.0, 435000.0), (378320.0, 379990.0), (377696.0, 370000.0), (571760.0, 576000.0), (448576.0, 449000.0), (404000.0, 399900.0), (480928.0, 479900.0), (-1.0566737375674509e+17, 459900.0), (568736.0, 572000.0), (409024.0, 408000.0), (424528.0, 424900.0), (347136.0, 347000.0), (538368.0, 549900.0), (449952.0, 449900.0), (502576.0, 499900.0), (364864.0, 374800.0), (505968.0, 500000.0), (401408.0, 405000.0), (-4.721891267058172e+16, 472900.0), (438400.0, 439900.0), (410944.0, 409900.0), (440496.0, 439900.0), (-9.118381271328755e+16, 465900.0), (401584.0, 400000.0), (-6.850835251409889e+16, 529900.0)}\n"
-     ]
-    }
-   ],
-   "source": [
-    "mapped = zip (housing_predictions, y_test)\n",
-    "mapped = set(mapped)\n",
-    "print (\"The zipped result is : \",end=\"\")\n",
-    "print (mapped)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### As you can see above some of the predictions are way off, while some being very close, let's try using a different regressor with decision trees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26342.828986272525"
+       "28752.631282487288"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1665,27 +1636,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### seems much better, maybe we can use a hybrid of the above and below to predict the house prices, let's see how the predictions stack against the real data"
+    "#### The decision tree regressor seems better at predicting, Let's try one last one which is random forest regressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29606.983120437802"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_predictions_randtree = randtree_reg.predict(X_test)\n",
+    "randtree_mse = mean_squared_error(y_test, housing_predictions_randtree)\n",
+    "randtree_rmse = np.sqrt(randtree_mse)\n",
+    "randtree_rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Before we go any deeper I want to see why is the linear regressions model giving such a bad error (possibly wierd outliers?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The zipped result is : {(374800.0, 374800.0), (500000.0, 500000.0), (409900.0, 409900.0), (435000.0, 435000.0), (498800.0, 465900.0), (424202.0, 405000.0), (424900.0, 425000.0), (424900.0, 424900.0), (412500.0, 408000.0), (448000.0, 449990.0), (370000.0, 379990.0), (539900.0, 572000.0), (389900.0, 399900.0), (429000.0, 370000.0), (489900.0, 499900.0), (435000.0, 400000.0), (566000.0, 549900.0), (548000.0, 556000.0), (576000.0, 576000.0), (529000.0, 549900.0), (510000.0, 524900.0), (539900.0, 589800.0), (534900.0, 479900.0), (489900.0, 472900.0), (410000.0, 471000.0), (510000.0, 529900.0), (418500.0, 419900.0), (399000.0, 379900.0), (449000.0, 449900.0), (399000.0, 459900.0), (439900.0, 439900.0), (348000.0, 347000.0), (449000.0, 449000.0), (524900.0, 475000.0)}\n"
+      "1)actual: 549900.0     predicted: 538368.0\n",
+      "2)actual: 449990.0     predicted: 444912.0\n",
+      "3)actual: 572000.0     predicted: 568736.0\n",
+      "4)actual: 471000.0     predicted: 469184.0\n",
+      "5)actual: 549900.0     predicted: -1.2033697579866758e+17\n",
+      "6)actual: 435000.0     predicted: 427872.0\n",
+      "7)actual: 425000.0     predicted: 420816.0\n",
+      "8)actual: 379900.0     predicted: 371376.0\n",
+      "9)actual: 524900.0     predicted: -1.167824084143542e+17\n",
+      "10)actual: 449900.0     predicted: 449952.0\n",
+      "11)actual: 479900.0     predicted: 480928.0\n",
+      "12)actual: 475000.0     predicted: 501552.0\n",
+      "13)actual: 370000.0     predicted: 377696.0\n",
+      "14)actual: 399900.0     predicted: 404000.0\n",
+      "15)actual: 472900.0     predicted: -4.721891267058172e+16\n",
+      "16)actual: 405000.0     predicted: 401408.0\n",
+      "17)actual: 529900.0     predicted: -6.850835251409889e+16\n",
+      "18)actual: 424900.0     predicted: 424528.0\n",
+      "19)actual: 589800.0     predicted: 587408.0\n",
+      "20)actual: 374800.0     predicted: 364864.0\n",
+      "21)actual: 556000.0     predicted: 542400.0\n",
+      "22)actual: 499900.0     predicted: 502576.0\n",
+      "23)actual: 459900.0     predicted: -1.0566737375674509e+17\n",
+      "24)actual: 409900.0     predicted: 410944.0\n",
+      "25)actual: 449000.0     predicted: 448576.0\n",
+      "26)actual: 439900.0     predicted: 440496.0\n",
+      "27)actual: 347000.0     predicted: 347136.0\n",
+      "28)actual: 449000.0     predicted: 450144.0\n",
+      "29)actual: 400000.0     predicted: 401584.0\n",
+      "30)actual: 379990.0     predicted: 378320.0\n",
+      "31)actual: 419900.0     predicted: 416480.0\n",
+      "32)actual: 465900.0     predicted: -9.118381271328755e+16\n",
+      "33)actual: 439900.0     predicted: 438400.0\n",
+      "34)actual: 500000.0     predicted: 505968.0\n",
+      "35)actual: 408000.0     predicted: 409024.0\n",
+      "36)actual: 576000.0     predicted: 571760.0\n"
      ]
     }
    ],
    "source": [
-    "mapped_tree = zip (housing_predictions_tree, y_test)\n",
-    "mapped_tree = set(mapped_tree)\n",
-    "print (\"The zipped result is : \",end=\"\")\n",
-    "print (mapped_tree)"
+    "i = 1\n",
+    "for test, prediction in zip(y_test, housing_predictions):\n",
+    "\n",
+    "    print (str(i) +\")\" + \"actual: \" + str(test) + \"     predicted: \" + str(prediction))\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### As you can see above test values 5, 9,15,17,23, and 32 seem way off...and on the negative side. Let's look at these data points"
    ]
   },
   {
